# Functionnal

./: CMakeLists.txt  README.md  common.h  constrainedBezier.h  functional.h  functional.hpp  functionalEvalFunc.h  functionnal.h  functionnal.hpp  functionnalEvalFunc.h  main.cpp  trace.plot
Functionnal/: common.h  constrainedBezier.h  functionnal.h  functionnal.hpp  functionnalEvalFunc.h
Functionnal/evalFunc/: bezier.hpp  cwise.hpp  polynomial.hpp
demos/: bezier.cpp  cwise.cpp  polynomial.cpp  polynomialFitting.cpp
